<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:andorid="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="golden_retriever.qru.RegisterActivity">

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30px">

        <LinearLayout
            android:id="@+id/the_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="15dp"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:inputType="textPersonName"
                android:layout_marginBottom="15dp"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last Name"
                android:inputType="textPersonName"
                android:layout_marginBottom="15dp"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:layout_marginBottom="15dp"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:layout_marginBottom="15dp"
                android:maxLines="1"
                android:singleLine="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="8pt"
                android:text="Choose an account type"/>
            <Spinner
                android:id="@+id/entitySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                />

            <ImageButton
                android:id = "@+id/li_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/li_sign_in_small"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:padding="0pt"
                />

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/push_register"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>