<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="golden_retriever.qru.StudentMain">


    <ScrollView
        android:id="@+id/student_main_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/student_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
                <EditText
                    android:id="@+id/student_update_profile_firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="First Name"/>
                <EditText
                    android:id="@+id/student_update_profile_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Last Name"/>
               </LinearLayout>

            <EditText
                android:id="@+id/student_update_profile_GPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="GPA"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

                <Spinner
                    android:id="@+id/student_update_profile_major"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                ></Spinner>

                <Spinner
                    android:id="@+id/student_update_profile_classification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"
                    ></Spinner>
        </LinearLayout>
            <EditText
                android:id="@+id/student_update_profile_special_notes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Any special considerations for employers to note"/>
            <Button
                android:id="@+id/submit_student_profile_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Update Student Profile"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/cancel_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Cancel"
                android:textStyle="bold"
                />



        </LinearLayout>
    </ScrollView>
</LinearLayout>
